更新图像资源

--- a/Hash/MainPage.xaml
+++ b/Hash/MainPage.xaml
@@ -22,13 +22,13 @@
             <ColumnDefinition  Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="请输入期望校验值" FontSize="16" />
-        <TextBox  x:Name="InputTextBox" Grid.Row="2" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="480"/>
+        <!--<TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="请输入期望校验值" FontSize="16" />
+        <TextBox  x:Name="InputTextBox" Grid.Row="2" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="480"/>-->
         <Button   x:Name="PickAFileButton" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Content="选取要校验的文件" Margin="10" Click="PickAFileButton_Click"/>
 
         
 
-        <TextBlock   x:Name="OutputTextBlock" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBlock   x:Name="OutputTextBlock" Grid.Row="4" Grid.Column="1" FontSize="24" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap"/>
 
 
     </Grid>
