--- a/Hash/MainPage.xaml
+++ b/Hash/MainPage.xaml
@@ -28,7 +28,7 @@
 
         
 
-        <TextBlock   x:Name="OutputTextBlock" Grid.Row="4" Grid.Column="1" FontSize="24" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+        <TextBlock   x:Name="OutputTextBlock" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap"/>
 
 
     </Grid>
